# Claude-Bridge

./: CLAUDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DISCORD_SETUP.md  PRD.md  QUICK_START.md  README.md  compose.yml  comprehensive_test.py  debug_test.py  pyproject.toml  real_test.py  run_discord.sh  setup-cli.sh  test_system.py
.devcontainer/: devcontainer.json
config/: .env.example  config.example.json  discord_config.json.example
scripts/: install-global.sh
src/claude_bridge/: __init__.py  main.py
src/claude_bridge/core/: __init__.py  session.py  session_manager.py
src/claude_bridge/discord_bot/: __init__.py  bot.py  progress_display.py  ui_components.py
src/claude_bridge/output_handling/: __init__.py  ansi_processor.py  discord_formatter.py  output_buffer.py  output_handler.py
src/claude_bridge/process_control/: __init__.py  process_controller.py
src/claude_bridge/utils/: __init__.py  config.py  error_handler.py  logging_setup.py  performance_monitor.py
tests/: run_integration_tests.py
tests/integration/: __init__.py  test_discord_integration.py  test_system_integration.py
tests/unit/: __init__.py  test_config.py  test_output_handler.py  test_session.py
